# ActionsTestRepo3

./: CMakeLists.txt  README.md  build-msvc.bat  build.sh  vcpkg.json
.github/workflows/: build-shaderc.yml  build-vcpkg.yml  build.yml  release.yml  test-macos.yml
src/: Main.cpp
